v1.4.1:
 - fixed divide-by-zero error in timestep.get_self_energies()
 - phase space of the Sun is now a constant in mwahpy_glob and should be accessed
   from there instead of hard-coded
 - fixed bug in coords.rot_around_arb_axis() that was slowing it down slightly
 - fixed bug in output_handler.read_output() where the progress bar would not
   go from 0 to 100% if the stop keyword was used

v1.4.0:
 - renamed orbit_fitting and orbit_fitting_gc to orbit_fitter and orbit_fitter_gc
 - refactored and fixed orbit_fitter
 - added documentation for orbit_fitter and orbit_fitter_gc
 - added documentation for changes since v1.3.5
 - functions that were re-used between orbit_fitter and orbit_fitter_gc are now
   all located in orbit_fitter
 - it's not really a chi-squared, so now it's just a goodness-of-fit in the orbit
   fitting packages

v1.3.8:
 - refactored and fixed orbit_fitting_gc
 - better way to do coords.cart_to_plane()
 - added coords.cart_to_lonlat()
 - coords.gal_to_lambet() and coords.cart_to_lambet() now use coords.cart_to_lonlat()
   in the background as abstraction
 - added coords.gal_to_lambet_galcentric(), will probably be deprecated soon in
   order to clarify coordinate systems

v1.3.7:
 - Fixed sign of Ly
 - added start and stop keywords to output_handler.read_output()

v1.3.6:
 - fixed sky_to_pole() tests and a couple other tests
 - fixed a bug with output_handler.make_nbody_input() not writing '\n' at end of file

v1.3.5:
 - sky_to_pole() now uses a change of basis matrix instead of vector math
 - fixed bugs with mismatches of Timestep.index_list after extra calculations
 - Timestep.id is now an array of ints, not floats
 - added Timestep.take_by_id()
 - output_handler.make_nbody_input() now properly handles the 'recenter' keyword argument
 - output_handler.make_nbody_input() pads now floats correctly
 - updated README
 - Timestep.typ is now a list of ints, not floats

v1.3.4: